# mqcpn

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile.tests  NOTICE  README.md  build.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deb-package.yml  gitleaks.yml  perf-fec-reinjection.yml  perf-ondemand.yml  perf-weekly.yml  perf.yml  release.yml  stress.yml  test-cc.yml  test-ciphers.yml  test-fec-reinjection.yml  test-path-api.yml  test-path-rotation.yml  test-pending-regression.yml  test-standby-backup.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/sdk-core/: build.gradle.kts
android/sdk-native/: build.gradle.kts  consumer-rules.pro
android/sdk-native/src/main/jni/: CMakeLists.txt  mqvpn_jni.c
android/sdk-network/: build.gradle.kts
android/sdk-runtime/: build.gradle.kts
bench_results/: aggregate_netns_20260222_190228.json  aggregate_netns_20260222_191959.json  failover_netns_20260222_184036.json  failover_netns_20260222_184457.json  reorder_full.csv  reorder_full_minrtt.csv  reorder_off.csv  reorder_off_minrtt.csv  reorder_optimal.md  reorder_optimal_frontier.tsv  reorder_optimal_minrtt.md  reorder_optimal_minrtt_frontier.tsv  reorder_single.csv  udp_sweep_netns_20260228_215805.json
bench_results/hybrid_mode/: hybrid_mode_1783350878.csv
benchmarks/: bench_aggregate.sh  bench_aggregate_wan.sh  bench_env_setup.sh  bench_failover.sh  bench_failover_wan.sh  bench_flow_scaling.sh  bench_hybrid_scheduler.sh  bench_plot.py  bench_udp_sweep.sh  plot_hybrid_scheduler.py  sweep_reorder.sh  sweep_reorder_analyze.py  sweep_single_path.sh
benchmarks/tcp_lane_microbench/: harness.c  run.sh
debian/: changelog  control  copyright  libmqvpn-dev.install  libmqvpn0.install  libmqvpn0.symbols  mqvpn.dirs  mqvpn.install  mqvpn.postinst  not-installed  rules
docs/: TESTING_LOCAL.md  api_audit.md  benchmarks_netns.md  control-api.md  hybrid_h2_memory_budget.md  windows_build.md  xquic_baseline.md
docs/audit-notes/: pr7-l5d-audit.md
docs/report/: 2026-06-18-reorder-only-datagram-multipath-connect-ip-en.md
fuzz/: fuzz_tcp_lane.c
fuzz/corpus/: README.md  gen_tcp_lane_corpus.py
include/: libmqvpn.h
packaging/: postinst
packaging/macos/: README.txt
packaging/windows/: README.txt
scripts/: TESTING_EXAMPLES.sh  benchmark_flow_scaling.sh  benchmark_multipath_scheduler.sh  benchmark_ntn.sh  benchmark_report.py  benchmark_udp_scheduler.sh  build_android.sh  build_deb.sh  install.sh  mqvpn-server-nat.sh  run_all_local_tests.sh  run_multipath_test.sh  run_wlb_test.sh  setup_server_nat.sh  start_server.sh  test_multiclient_multipath.sh  vps_setup.sh  vps_teardown.sh
scripts/ci_benchmarks/: ci_bench_4path_mtu.sh  ci_bench_aggregate.sh  ci_bench_aggregate_cc.sh  ci_bench_backup_fec.sh  ci_bench_diag.sh  ci_bench_env.sh  ci_bench_failover.sh  ci_bench_fec.sh  ci_bench_multipath_scheduler.sh  ci_bench_ntn.sh  ci_bench_raw_throughput.sh  ci_bench_reinjection.sh  ci_bench_standby_backup.sh  ci_bench_udp_sweep.sh  ci_bench_wrtt_weight.sh  ci_bench_wrtt_weight_verify.sh
scripts/ci_e2e/: run_8link_aggregation_test.sh  run_8paths_dellink_test.sh  run_addr_del_failover_test.sh  run_admin_down_test.sh  run_backup_fec_test.sh  run_carrier_flap_test.sh  run_cc_test.sh  run_cipher_test.sh  run_control_api_test.sh  run_d1_ip_change_rebind_test.sh  run_d1_port_only_retain_test.sh  run_dellink_test.sh  run_g_p10_proactive_cid_test.sh  run_g_p14_path_abandon_altpath_test.sh  run_g_p15_standby_signal_test.sh  run_g_p16_paths_blocked_emission_test.sh  run_ipv6_dataplane_test.sh  run_ipv6_full_multipath_test.sh  run_ipv6_multipath_test.sh  run_ipv6_transport_test.sh  run_killswitch_test.sh  run_nat_test.sh  run_path_api_test.sh  run_path_bounce_test.sh  run_reconnect_test.sh  run_route_gate_test.sh  run_systemd_test.sh  run_test.sh  run_throughput_floor_test.sh  run_validation_blackhole_test.sh  sanitizer_check.sh  test_multiclient.sh
scripts/ci_interop/: build_picoquic.sh
scripts/ci_publish/: publish_to_r2.sh  update_perf_index.py
scripts/ci_stress/: ci_stress_env.sh  ci_stress_failover.sh  ci_stress_long_running.sh  ci_stress_multi_client.sh  ci_stress_reconnect.sh
scripts/dev/: insert_spdx.sh
scripts/lint/: check_lifecycle_field_writes.sh
src/: addr_pool.c  addr_pool.h  auth.c  auth.h  config.c  config.h  flow_sched.c  flow_sched.h  icmp.c  icmp.h  json_mini.h  log.c  log.h  main.c  mqvpn_client.c  mqvpn_config.c  mqvpn_conn_settings.c  mqvpn_conn_settings.h  mqvpn_internal.h  mqvpn_scheduler.h  mqvpn_server.c  mqvpn_server_internal.h  mqvpn_util.c  path_entry_internal.h  path_error_policy.c  path_error_policy.h  path_mgr.c  path_mgr.h  path_rotation.c  path_rotation.h  path_state_machine.c  path_state_machine.h  reorder.h  reorder_rx.c  reorder_rx.h  reorder_tx.c  reorder_tx.h  vpn_client.h  vpn_server.h
src/compat/: getopt.c  getopt.h  (+1 more)
systemd/: client.conf.example  client.json.example  mqvpn-client@.service.in  mqvpn-server.service.in  server.conf.example  server.json.example
tests/: fake_cmd.h  hybrid_h2_halfclose_client.py  hybrid_h2_lane_responder.py  hybrid_h2_lane_sender.py  hybrid_h2_rst_target.py  perf_fec_qos_ablation.sh  test_api.c  test_auth.c  test_cc_config.c  test_ciphers.c  test_classifier.c  test_cli_path_argv.sh  test_config.c  test_conn_settings.c  test_control_response_bound.c  test_control_socket.c  test_dns.c  test_dns_backup_darwin.c  test_dns_state_darwin.c  test_e2e_8paths.sh  test_e2e_backup_fec.sh  test_e2e_dellink.sh  test_e2e_hybrid_h1.sh  test_e2e_hybrid_h2.sh  test_e2e_hybrid_mixed.sh  test_e2e_reorder.sh  test_fec_reinj.c  test_flow_sched.c  test_icmp.c  test_killswitch_rules_darwin.c  test_path_error_policy.c  test_path_readd_reconnect.c  test_path_rotation.c  test_path_state_machine.c  test_pending_path.c  test_reorder_common.c  test_reorder_config.c  test_reorder_rx.c  test_reorder_tx.c  test_route_check.c  (+10 more)
website/: index.md  package-lock.json  package.json  tsconfig.json
(+129 files in other folders)
